--- a/CSS/style.css
+++ b/CSS/style.css
@@ -194,7 +194,7 @@ header label{
 
 .about .column .image img{
     width: 50%;
-    animation: float 12s linear infinite;
+    
  }
 
 
@@ -323,6 +323,12 @@ transition: 0.1s;
      margin-bottom: 2rem;
 }
 
+.profissionais .box-container img {
+    width: 40rem;
+    height: 40rem;
+    
+}
+
 .profissionais .box-container h1 {
     color: rgb(189,30,30);
     font-size: 5.9rem;
@@ -416,7 +422,14 @@ transition: 0.1s;
        cursor: pointer;
        transition:  ease-in-out 0.2s;
     }
-
+    .about .column .image img{
+        width: 100%;
+        
+     }
+     .about .column .content h3{
+        font-size: 4rem;
+        color: rgb(15, 15, 15);
+     }
     
 }
 
@@ -579,18 +592,12 @@ transition: 0.1s;
         margin-left: 1.5rem;
     }
     .profissionais .box-container img{
-        height: 45rem;
-        width:25rem;
-        margin-right: 1rem;
+        height: 39rem;
+        width:37rem;
+       
         border-radius: 2px;
     }
-    .map iframe{
-        display: block;
-        width: auto;
-        margin-left: 3rem;
-        margin-bottom: 2rem;
-        
-    }
+ 
    
 }
 
