--- a/CSS/styleSorteio.css
+++ b/CSS/styleSorteio.css
@@ -169,7 +169,7 @@ html{
     width: 100%;
     height: 100%;
   }
-  
+
   
   /* media queries */
   
@@ -188,6 +188,9 @@ html{
   
     .home .content p{
       font-size: 1.5rem;
+    }
+    .features .heading {
+        font-size: 35px;
     }
   
   }
@@ -329,38 +332,58 @@ color: #333;
 
 
 
-.features .box-container .box{
-  
-flex: 1 1 30rem;
-background: white;
-border-radius: .5rem;
-border: .1rem solid rgba(0, 0, 0, 0.1);
-box-shadow: 0.1 .5rem 1rem rgba(0, 0, 0, 0.527);
-margin: 1.5rem;
-padding: 4rem 2rem;
-text-align: center;
-transition: 0.1s;
-
+ .features  {
+background-color: rgb(134, 132, 132);
+height: 300px;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-direction: column;
 
 }
-
-.features .box-container .box img{
-    height: 20rem;
-   
-}
-
-.features .box-container .box h3{
-    font-size: 2rem;
-    color: #333;
-    padding-top: 1rem;
-}
-
-.features .box-container .box p{
-    font-size: 1.4rem;
-    color: #666;
-    padding-top: 1rem;
+.features h1 {
+    font-size: 50px;
+    margin: 1rem 0rem;
     text-align: center;
-}
+     
+     }
+
+.features p {
+   font-size: 20px;
+   margin: 0 1rem;
+   text-align: center;
+    
+    }
+    .features button{
+        margin-top: 2.5rem;
+    }
+    .features button a {
+ background-color: rgb(185, 31, 31);
+ outline: none;
+ box-shadow: 0 .5rem 1rem  rgba(0, 0, 0,.5);
+color: white;
+margin: 5rem 0;
+height: 7rem;
+padding: 2rem 3rem;
+border-radius: 6px;
+cursor: pointer;
+transition: 0.2s ease-in-out;
+font-weight: bold;
+letter-spacing: 2px;
+    }
+    .features button a:hover {
+        letter-spacing: 2px;
+        background-color: rgb(255, 255, 255);
+        outline: none;
+        box-shadow: 0 .5rem 1rem  rgba(0, 0, 0,.5);
+       color: rgb(185, 31, 31);
+       margin: 2rem 0;
+       height: 7rem;
+       font-weight: bold;
+       padding: 2rem 3rem;
+       border-radius: 6px;
+       cursor: pointer;
+           }
 
 .content-video{
     width: 100%;
@@ -465,6 +488,23 @@ transition: 0.1s;
         padding-top:7.5rem;
     }
 
+    header{
+        width: 100%;
+    }
+.home{
+    user-select: none;
+}
+    .home .swiper-container {
+        max-width: 100%;
+        padding-top: 6rem;
+        padding-bottom: 5rem;
+      }
+      
+      .home .swiper-slide {
+        width: 40rem;
+        height: 40rem;
+      }
+
     
 }
 
@@ -483,7 +523,7 @@ transition: 0.1s;
         position: absolute;
         top: 100%;
         left: 0;
-        width: 100%;
+       
         background: rgb(0, 0, 0);
         padding:1rem 2rem;
         border-top: .1rem solid rgba(0, 0, 0, 0.2);
