--- a/CSS/style.css
+++ b/CSS/style.css
@@ -152,14 +152,16 @@ header label{
     font-size: 25px;
     letter-spacing: 2px;
 }
-
-.home button{
+.home button a{
+    color: white;
+}
+.home button {
    background-color:  rgb(202, 29, 29);
    padding: 8px;
    border-radius: 8px;
    color: white;
    font-size: 17px;
-   margin-top: 20px;
+   margin-top: 50px;
    cursor: pointer;
    transition:  ease-in-out 0.2s;
 }
@@ -169,7 +171,7 @@ header label{
     border-radius: 8px;
     color: white;
     font-size: 17px;
-    margin-top: 20px;
+    margin-top: 50px;
     box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.267);
     transform: scale(1.1);
  }
@@ -351,10 +353,11 @@ transition: 0.1s;
 }
 .profissionais .box-container .box-content span{
     color:rgb(189,30,30);
+    font-size: 20px;
 }
-.profissionais .box-container span {
-    color: #0ccc26;
-    font-size: 1.4rem;
+.profissionais .box-container p {
+    color: #101110;
+    font-size: 1.7rem;
 }
 
 .enderecos{
