--- a/CSS/styleSorteio.css
+++ b/CSS/styleSorteio.css
@@ -403,6 +403,15 @@ letter-spacing: 2px;
 }
 
 
+.profissionais  h1{
+    font-size: 40px;
+}
+
+.profissionais img{
+    height: 300px;
+    width: 400px;
+}
+
 
 .profissionais .box-container{
     border: 1px solid rgba(8, 8, 8, 0.068);
@@ -439,12 +448,20 @@ letter-spacing: 2px;
     font-size: 1.2rem;
     font-weight: bold;
 }
-.profissionais .box-container  {
-   
-    font-size: 1.3rem;
+.profissionais .box-container a {
+   align-items: center;
+   display: flex;
+   justify-content: center;
 }
 .profissionais .box-container .box-content span{
+    color:rgb(34, 32, 32);
+    font-size: 20px;
+    font-weight: bold;
+}
+.profissionais .box-container .box-content p{
     color:rgb(189,30,30);
+    font-size: 20px;
+    font-weight: bold;
 }
 .profissionais .box-container span {
     color: #0ccc26;
@@ -491,6 +508,24 @@ letter-spacing: 2px;
     header{
         width: 100%;
     }
+    .profissionais .box-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .profissionais .box-container h1{
+   text-align: center;
+    }
+    .profissionais .box-container img{
+       width: 300px;
+         }
+    .profissionais .box-container a{
+        display: flex;
+        justify-content:center;
+        padding: 1rem 0;
+         }
 .home{
     user-select: none;
 }
@@ -523,7 +558,7 @@ letter-spacing: 2px;
         position: absolute;
         top: 100%;
         left: 0;
-       
+       width: 100%;
         background: rgb(0, 0, 0);
         padding:1rem 2rem;
         border-top: .1rem solid rgba(0, 0, 0, 0.2);
@@ -625,211 +660,9 @@ letter-spacing: 2px;
         display: none;
     }
    
-    .socialDesk{
-        display: block;
-        display: flex;
-        
-    }
-    .socialDesk a{
-        padding: 4rem;
-        
-    }
-
-    
-    .social {
-       display: none;
-       
-        }
-        .social a {
-            margin: 2rem 2rem;
-            
-             }
-
-    .about .column .content .buttons a{
-        width: 100%;
-        text-align: center;
-      
-    }
-    .about .column .content .buttons a:last-child{
-        margin: 1rem 0;
-        
-    }
-    .profissionais .box-container{
-        display: block;
-    }
-    .profissionais .box-container{
-        text-align: center;
-    }
-
-    #fotoR{
-        width: 25rem;
-        height: 50rem;
-        margin-left: 1.5rem;
-    }
-    .profissionais .box-container img{
-        height: 45rem;
-        width:25rem;
-        margin-right: 1rem;
-        border-radius: 2px;
-    }
-    .map iframe{
-        display: block;
-        width: auto;
-        margin-left: 3rem;
-        margin-bottom: 2rem;
-        
-    }
-   
-}
-
-.pricing .box-container {
-
-    display: flex;
-   
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.pricing .box-container img{
-
-   height: 40rem;
-   width: 20rem;
-}
-
-.pricing .box-container .box{
-    display: flex;
-    border-radius: .5rem;
-    flex: 1 1 27rem;
-    margin: 1rem;
-    padding:2rem;
-    background: white;
-    border: .1 solid rgba(0, 0, 0, 0.041);
-    box-shadow:  0 .1rem 1rem rgba(0, 0, 0, 0.2);
-    text-align: center;
-}
-.pricing .box-container .box:nth-child(2),
-.pricing .box-container .box:hover{
-    border:  .1rem solid var(--pink);
-}
-
-.pricing .box-container .box .title{
-    color: var(--purple);
-    font-size: 2.5rem;
-    padding-top: 1rem;
-}
-
-.pricing .box-container .box .price{
-    font-size: 4rem;
-    color: var(--pink) ;
-    padding: 1rem 0;
-}
-
-.pricing .box-container .box .price span{
-    font-size: 2rem;
-}
-
-.pricing .box-container .box ul{
-    padding: 1rem 0;
-
-}
-.pricing .box-container .box ul li{
-    font-size: 1.7rem;
-    color: #666 ;
-    padding: .5rem 0;
-}
-
-.pricing .box-container .box ul li .fa-check{
-    color: lightgreen ;
-}
-
-.pricing .box-container .box ul li .fa-times{
-    color: rgb(240, 22, 51) ;
 }
 
 
-textarea{
-    width: 100%;
-    border-bottom: .1rem solid rgba(0, 0, 0, 0.2);
-    resize: none;
-
-
-}
-
-
-.contact{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-bottom: 4rem;
-}
-
-.contact .image{
-    flex:  1 1 40rem;
-}
-
-
-.contact .image img{
-    width: 100%;
-    padding: 2rem;
-}
-.contact form{
-    flex:  1 1 40rem;
-    padding: 2rem 3rem;
-    border: .1rem solid rgba(0, 0, 0, 0.164);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
-    border-radius: .5rem;
-    background: white;
-}
-
-.contact form .heading{
-
-    text-align: center;
-    padding: 0;
-    padding-bottom: 2rem;
-}
-
-.contact form .inputBox{
-    position: relative;
-}
-
-
-.contact form .inputBox input , .contact form .inputBox input textarea{
-
-width: 100%;
-background: none;
-color: #666;
-margin: 1.5rem 0;
-padding: .5rem 0;
-font-size: 1.7rem;
-border-bottom: .1rem solid rgba(0, 0, 0, 0.2) ;
-text-transform: none;
-
-}
-
-.contact form .inputBox input textarea{
-    resize: none;
-    width: 100%;
-    height: 13rem;
-    resize: none;
-}
-
-.contact form .inputBox label{
-    position:absolute;
-    top:1.7rem;left: 0;
-    font-size: 1.7;
-    color: #666;
-    transition: .2s linear;
-
-}
-.contact form .inputBox input:focus ~ label,
-.contact form .inputBox label:valid ~ label,
-.contact form .inputBox textarea:focus ~ label,
-.contact form .inputBox textarea:valid ~ label{
-    top: -.7rem;
-    font-size: 1.5rem;
-    color: var(--pink);
-}
 
 .footer {
     padding-top: 3rem;
