--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,6 +19,8 @@
     outline: none; border:none;
     user-select: none;
     list-style: none;
+    padding: 0.1rem;
+    
 }
 
 
@@ -39,7 +41,7 @@ body{
 
 section{
     min-height: 100vh;
-    padding: 0 9%;
+
     padding-top:7.5rem;
 }
 
@@ -81,7 +83,7 @@ header{
     position: fixed;
     top: 0; left: 0;
     width: 100%;
-    background: rgb(0, 0, 0);
+    background: rgb(255, 255, 255);
     box-shadow: 0 .5rem 1rem rgba(223, 10, 10, 0.267);
     padding: 2rem 9%;
     display: flex ;
@@ -91,20 +93,17 @@ header{
    
 }
 
-header .logo{
-    font-size: 2.3rem;
-    color: var(--purple);
-
-}
-header .logo span{
-    color: var(--pink);
+header img{
+    height: 20px;
 }
 
 header .navbar a{ 
     font-size: 1.7rem;
     margin-left: 2rem;
-    color: var(--purple);
+    color: black;
+    font-weight: bold;
     transition: 0.6s;
+    text-decoration: none;
 }
 
 header .navbar a:hover{ 
@@ -119,63 +118,20 @@ header input{
 
 header label{
     font-size: 3rem;
-    color: var(--purple);
+    color: black;
     cursor: pointer;
     visibility: hidden;
     opacity: 0;
 }
-
-
-
-
-
-
 .home{
-   
-    display: flex;
-    align-items: center;
-    justify-content: center;
-   background-color: black;
-   flex-direction: column;
- 
+   padding: 5rem 0;
 }
-.home h1{
-    color:white;
-    font-size: 120px;
-}
-.home h1 span{
-    color:rgb(189,30,30);
-    font-size: 140px;
-}
-.home h4{
-    color: white;
-    font-size: 25px;
-    letter-spacing: 2px;
-}
-.home button a{
-    color: white;
-}
-.home button {
-   background-color:  rgb(202, 29, 29);
-   padding: 8px;
-   border-radius: 8px;
-   color: white;
-   font-size: 17px;
-   margin-top: 50px;
-   cursor: pointer;
-   transition:  ease-in-out 0.2s;
-}
-.home button:hover{
-    background-color: rgb(182, 30, 30);
-    padding: 8px;
-    border-radius: 8px;
-    color: white;
-    font-size: 17px;
-    margin-top: 50px;
-    box-shadow: 0 .5rem 1rem rgba(255, 255, 255, 0.267);
-    transform: scale(1.1);
- }
- 
+
+
+
+
+
+
  .about .heading span{
      color: rgb(189,30,30);
  }
@@ -190,12 +146,14 @@ header label{
 }
 
 .about .column .image{
-   flex:1 1 40rem;
+   flex:1 2 30rem;
 }
 
 
 .about .column .image img{
     width: 50%;
+
+    margin-top: 2rem;
     
  }
 
@@ -203,7 +161,12 @@ header label{
 
 
 .about .column .content{
-    flex:1 1 40rem;
+    flex:1 1 30rem;
+   display: flex;
+   padding: 0 3rem;
+   justify-content: space-between;
+   flex-direction: column;
+   align-items: center;
  }
 
 
@@ -218,6 +181,9 @@ header label{
  }
  .about .column .content p{
     font-size:  1.5rem;
+    text-align: center;
+    
+ 
  }
  .about .column .content p span{
     font-size:  1.5rem;
@@ -395,18 +361,14 @@ transition: 0.1s;
 
 @media (max-width:780px) {
 
-    section{
-      
-        padding: 0 3%;
-       
-    }
+   
 
     .home h1{
         color:white;
         font-size: 40px;
     }
     .home h1 span{
-        color:rgb(189,30,30);
+        color:rgba(189, 30, 30, 0);
         font-size: 45px;
     }
     .home h4{
@@ -416,7 +378,7 @@ transition: 0.1s;
     }
     
     .home button{
-       background-color:  rgb(202, 29, 29);
+       background-color:  rgba(202, 29, 29, 0);
        padding: 8px;
        border-radius: 8px;
        color: white;
@@ -452,12 +414,16 @@ transition: 0.1s;
         top: 100%;
         left: 0;
         width: 100%;
-        background: rgb(0, 0, 0);
+        background: rgb(230, 39, 39);
         padding:1rem 2rem;
         border-top: .1rem solid rgba(0, 0, 0, 0.2);
         box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.1) ;
         transform: scaleY(0);
         transition:  .2s linear;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 
     header .navbar a{
@@ -486,9 +452,9 @@ transition: 0.1s;
 
         }
 
-        .home .image img{
+        .home {
             width: 100%;
-            margin-top: 8rem;
+            margin-top: 1rem;
             
         }
         .home .content h3{
@@ -513,7 +479,7 @@ transition: 0.1s;
         }
         .about img{
             background-position: right;
-            margin-top: 2rem;
+            
         }
         .newsletter {
             margin-top: 2rem;        }
@@ -689,7 +655,7 @@ textarea{
 
 .contact .image img{
     width: 100%;
-    padding: 2rem;
+    padding: rem;
 }
 .contact form{
     flex:  1 1 40rem;
@@ -751,7 +717,7 @@ text-transform: none;
 
 .footer {
     padding-top: 3rem;
-    background:black;
+    background:rgb(255, 0, 0);
     background-size: cover;
     background-position: center;
 
@@ -764,12 +730,15 @@ text-transform: none;
 .footer .box-container .box{
     flex: 1 1 25rem;
     margin: 2rem;
+    align-items: center;
+    text-align: center;
+    
 }
 
 .footer .box-container .box h3{
    font-size: 2.5rem;
    padding: 1rem 0;
-   color: rgb(143, 23, 23);
+   color: rgb(255, 255, 255);
    text-decoration: underline;
    text-underline-offset:  1rem;
 }
@@ -778,6 +747,7 @@ text-transform: none;
 .footer .box-container .box p{
     font-size: 1.5rem;
     padding: .5rem 0;
+    
     color: rgb(251, 251, 251);
     
  }
@@ -786,6 +756,7 @@ text-transform: none;
     font-size: 1.5rem;
     padding: 1rem 0;
     color: white;
+    text-decoration: none;
  
    
  }
@@ -808,4 +779,6 @@ text-transform: none;
         color: white;
         font-family: Arial, Helvetica, sans-serif;
     }
+
+
 
