--- a/CSS/style.css
+++ b/CSS/style.css
@@ -124,7 +124,8 @@ header label{
     opacity: 0;
 }
 .home{
-   padding: 5rem 0;
+   padding: 10rem 0;
+   background: linear-gradient(90deg, black, red, black)
 }
 
 
