--- a/CSS/style.css
+++ b/CSS/style.css
@@ -90,6 +90,7 @@ header{
     align-items: center;
     justify-content: space-between;
     z-index: 1000;
+ 
    
 }
 
@@ -123,16 +124,19 @@ header label{
     visibility: hidden;
     opacity: 0;
 }
+
 .home{
-   padding: 9rem 0;
+    margin-top: 7rem;
+   padding: 2rem 0;
    background: linear-gradient(90deg, black, red, black)
 }
 
 
+
 .box1{
     display: none;
-    background: linear-gradient(90deg, black, red, black)
-
+    background: linear-gradient(90deg, black, red, black);
+   
 }
 
 
@@ -394,7 +398,8 @@ transition: 0.1s;
        transition:  ease-in-out 0.2s;
     }
     .box{
-        display: none;
+        display: block;
+
     }
 
     .box1{
@@ -471,8 +476,11 @@ transition: 0.1s;
 
         .home {
             width: 100%;
-            margin-top: 1rem;
+            margin-top: 4.6rem;
             
+        }
+        .box1{
+            padding: 5.5rem 0;
         }
         .home .content h3{
            text-align: center;
@@ -492,31 +500,18 @@ transition: 0.1s;
 
         .about{
             background-position: right;
+            
           
         }
         .about img{
             background-position: right;
             
         }
-        .newsletter {
-            margin-top: 2rem;        }
+        .footer{
+            height: 150vh;
+        }
+      
 
-        .newsletter p{
-            width: auto;
-        }
-
-        .newsletter .iframe{
-            display: none;
-            margin-left: 1.7rem;
-        }
-        .newsletter .iframeCel{
-            display: block;
-            margin-left: 1.7rem;
-        }
-
-        .newsletter .iframeDesktop{
-            display:none;
-        }
         
        
 
@@ -545,8 +540,8 @@ transition: 0.1s;
         padding: 4rem;
         
     }
-
-    
+   
+   
     .social {
        display: none;
        
@@ -565,87 +560,10 @@ transition: 0.1s;
         margin: 1rem 0;
         
     }
-    .profissionais .box-container{
-        display: block;
-    }
-    .profissionais .box-container{
-        text-align: center;
-    }
-
-   
-    .profissionais .box-container img{
-        height: 39rem;
-        width:37rem;
-       
-        border-radius: 2px;
-    }
- 
+  
    
 }
 
-.pricing .box-container {
-
-    display: flex;
-   
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.pricing .box-container img{
-
-   height: 40rem;
-   width: 20rem;
-}
-
-.pricing .box-container .box{
-    display: flex;
-    border-radius: .5rem;
-    flex: 1 1 27rem;
-    margin: 1rem;
-    padding:2rem;
-    background: white;
-    border: .1 solid rgba(0, 0, 0, 0.041);
-    box-shadow:  0 .1rem 1rem rgba(0, 0, 0, 0.2);
-    text-align: center;
-}
-.pricing .box-container .box:nth-child(2),
-.pricing .box-container .box:hover{
-    border:  .1rem solid var(--pink);
-}
-
-.pricing .box-container .box .title{
-    color: var(--purple);
-    font-size: 2.5rem;
-    padding-top: 1rem;
-}
-
-.pricing .box-container .box .price{
-    font-size: 4rem;
-    color: var(--pink) ;
-    padding: 1rem 0;
-}
-
-.pricing .box-container .box .price span{
-    font-size: 2rem;
-}
-
-.pricing .box-container .box ul{
-    padding: 1rem 0;
-
-}
-.pricing .box-container .box ul li{
-    font-size: 1.7rem;
-    color: #666 ;
-    padding: .5rem 0;
-}
-
-.pricing .box-container .box ul li .fa-check{
-    color: lightgreen ;
-}
-
-.pricing .box-container .box ul li .fa-times{
-    color: rgb(240, 22, 51) ;
-}
 
 
 textarea{
@@ -751,6 +669,15 @@ text-transform: none;
     text-align: center;
     
 }
+.footer .box-container .box img{
+   height: 6rem;
+    
+}
+
+.footer .box-container .box .imgFooter{
+    height: 20rem;
+     
+ }
 
 .footer .box-container .box h3{
    font-size: 2.5rem;
