--- a/CSS/style.css
+++ b/CSS/style.css
@@ -435,93 +435,11 @@ header label{
 
 
 
-textarea{
-    width: 100%;
-    border-bottom: .1rem solid rgba(0, 0, 0, 0.2);
-    resize: none;
 
-
-}
-
-
-.contact{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    padding-bottom: 4rem;
-}
-
-.contact .image{
-    flex:  1 1 40rem;
-}
-
-
-.contact .image img{
-    width: 100%;
-    padding: rem;
-}
-.contact form{
-    flex:  1 1 40rem;
-    padding: 2rem 3rem;
-    border: .1rem solid rgba(0, 0, 0, 0.164);
-    box-shadow: 0 .5rem 1rem rgba(0, 0, 0, 0.2);
-    border-radius: .5rem;
-    background: white;
-}
-
-.contact form .heading{
-
-    text-align: center;
-    padding: 0;
-    padding-bottom: 2rem;
-}
-
-.contact form .inputBox{
-    position: relative;
-}
-
-
-.contact form .inputBox input , .contact form .inputBox input textarea{
-
-width: 100%;
-background: none;
-color: #666;
-margin: 1.5rem 0;
-padding: .5rem 0;
-font-size: 1.7rem;
-border-bottom: .1rem solid rgba(0, 0, 0, 0.2) ;
-text-transform: none;
-
-}
-
-.contact form .inputBox input textarea{
-    resize: none;
-    width: 100%;
-    height: 13rem;
-    resize: none;
-}
-
-.contact form .inputBox label{
-    position:absolute;
-    top:1.7rem;left: 0;
-    font-size: 1.7;
-    color: #666;
-    transition: .2s linear;
-
-}
-.contact form .inputBox input:focus ~ label,
-.contact form .inputBox label:valid ~ label,
-.contact form .inputBox textarea:focus ~ label,
-.contact form .inputBox textarea:valid ~ label{
-    top: -.7rem;
-    font-size: 1.5rem;
-    color: var(--pink);
-}
 
 .footer {
     padding-top: 3rem;
-    background:rgb(255, 0, 0);
+    background: linear-gradient(90deg, black, red, black);
     background-size: cover;
     background-position: center;
 
@@ -530,6 +448,7 @@ text-transform: none;
 .footer .box-container{
     display: flex;
     flex-wrap: wrap;
+    background:rgb(255, 0, 0);
 }
 .footer .box-container .box{
     flex: 1 1 25rem;
