--- a/CSS/quemsomos.css
+++ b/CSS/quemsomos.css
@@ -1,3 +1,22 @@
+@media (max-width:307px) {
+
+    .home .carousel .carousel-inner .carousel-item img{
+        height: 40vh;
+    }
+    
+    .about .column .image img{
+        height: 420px;
+    }
+@media (max-width:325px) {
+
+    .home .carousel .carousel-inner .carousel-item img{
+        height: 40vh;
+    }
+    
+    .about .column .image img{
+        height: 420px;
+    }
+
 
 @media (max-width:385px) {
 
@@ -69,4 +88,4 @@ height: 69vh;
     height: 69vh;
 }
 
-}}
+}}}}
