--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,18 @@
    height: 50vh;
 }
 
+
+.about .content a .iconepdf{
+    height: 30px;
+    margin-right: 1rem;
+}
+
+.about .content .buttons a .btn1{
+    padding: 2rem 5rem;
+    background-color: red;
+}
+
+
 *{
     font-family: 'Poppins', sans-serif;
     margin:0; padding:0;
